# ai-ux-atlas-backend

./: README.md  pyproject.toml
app/: main.py
app/routes/: gen_map.py
scripts/: test_genmap.py
