[project]
name = "ai-ux-atlas-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "langchain-openai>=0.2.10",
    "langchain>=0.3.9",
    "langchain-community>=0.3.8",
    "langsmith>=0.1.147",
    "uvicorn[standard]>=0.32.1",
]
